02332/MiniJavaProject1/src/compiler/Frontend/MiniJavaParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g 2010-11-15 12:30:56

  package compiler.Frontend;
  
  import java.util.LinkedList;
  import compiler.IR.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class MiniJavaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENT", "COMMENT", "INT", "STRING", "LOWER", "UPPER", "NONNULL", "NUMBER", "NEWLINE", "CHAR", "WHITESPACE", "'class'", "'extends'", "'{'", "'}'", "'public'", "'static'", "'void'", "'main'", "'('", "'String[]'", "')'", "'='", "';'", "'boolean'", "'int'", "'['", "']'", "','", "'return'", "'if'", "'else'", "'while'", "'System.out.println'", "'&&'", "'=='", "'<'", "'+'", "'-'", "'*'", "'!'", "'new'", "'true'", "'false'", "'.'", "'this'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int CHAR=13;
    public static final int EOF=-1;
    public static final int T__19=19;
    public static final int T__16=16;
    public static final int T__15=15;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int IDENT=4;
    public static final int COMMENT=5;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int NUMBER=11;
    public static final int WHITESPACE=14;
    public static final int INT=6;
    public static final int NONNULL=10;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int NEWLINE=12;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int LOWER=8;
    public static final int UPPER=9;
    public static final int STRING=7;

    // delegates
    // delegators


        public MiniJavaParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public MiniJavaParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return MiniJavaParser.tokenNames; }
    public String getGrammarFileName() { return "/home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g"; }





    // $ANTLR start "program"
    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:17:1: program returns [MJProgram p] : mc= mainClass (cd= classDeclaration )* ;
    public final MJProgram program() throws RecognitionException {
        MJProgram p = null;

        MJClass mc = null;

        MJClass cd = null;


        try {
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:18:3: (mc= mainClass (cd= classDeclaration )* )
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:18:5: mc= mainClass (cd= classDeclaration )*
            {
             LinkedList<MJClass> cdl = new LinkedList<MJClass>(); 
            pushFollow(FOLLOW_mainClass_in_program52);
            mc=mainClass();

            state._fsp--;

             cdl.add(mc); 
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:21:7: (cd= classDeclaration )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==15) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:21:9: cd= classDeclaration
            	    {
            	    pushFollow(FOLLOW_classDeclaration_in_program74);
            	    cd=classDeclaration();

            	    state._fsp--;

            	     cdl.add(cd); 

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

             
                  p = new MJProgram(cdl);
                

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return p;
    }
    // $ANTLR end "program"


    // $ANTLR start "classDeclaration"
    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:29:1: classDeclaration returns [MJClass c] : 'class' cname= IDENT ( 'extends' scname= IDENT )? '{' (vd= varDeclaration )* (md= methodDeclaration )* '}' ;
    public final MJClass classDeclaration() throws RecognitionException {
        MJClass c = null;

        Token cname=null;
        Token scname=null;
        MJVariable vd = null;

        MJMethod md = null;


        try {
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:30:3: ( 'class' cname= IDENT ( 'extends' scname= IDENT )? '{' (vd= varDeclaration )* (md= methodDeclaration )* '}' )
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:30:5: 'class' cname= IDENT ( 'extends' scname= IDENT )? '{' (vd= varDeclaration )* (md= methodDeclaration )* '}'
            {
             String superClass = "Object"; 
                  LinkedList<MJVariable> vdl = new LinkedList<MJVariable>();
                  LinkedList<MJMethod> mdl = new LinkedList<MJMethod>();
                
            match(input,15,FOLLOW_15_in_classDeclaration126); 
            cname=(Token)match(input,IDENT,FOLLOW_IDENT_in_classDeclaration132); 
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:34:27: ( 'extends' scname= IDENT )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==16) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:34:29: 'extends' scname= IDENT
                    {
                    match(input,16,FOLLOW_16_in_classDeclaration136); 
                    scname=(Token)match(input,IDENT,FOLLOW_IDENT_in_classDeclaration142); 
                     superClass = (scname!=null?scname.getText():null); 

                    }
                    break;

            }

            match(input,17,FOLLOW_17_in_classDeclaration153); 
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:35:9: (vd= varDeclaration )*
            loop3:
            do {
                int alt3=2;
                switch ( input.LA(1) ) {
                case 28:
                    {
                    int LA3_2 = input.LA(2);

                    if ( (LA3_2==IDENT) ) {
                        int LA3_5 = input.LA(3);

                        if ( ((LA3_5>=26 && LA3_5<=27)) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;
                case 29:
                    {
                    int LA3_3 = input.LA(2);

                    if ( (LA3_3==30) ) {
                        int LA3_6 = input.LA(3);

                        if ( (LA3_6==31) ) {
                            int LA3_8 = input.LA(4);

                            if ( (LA3_8==IDENT) ) {
                                int LA3_5 = input.LA(5);

                                if ( ((LA3_5>=26 && LA3_5<=27)) ) {
                                    alt3=1;
                                }


                            }


                        }


                    }
                    else if ( (LA3_3==IDENT) ) {
                        int LA3_5 = input.LA(3);

                        if ( ((LA3_5>=26 && LA3_5<=27)) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;
                case IDENT:
                    {
                    int LA3_4 = input.LA(2);

                    if ( (LA3_4==IDENT) ) {
                        int LA3_5 = input.LA(3);

                        if ( ((LA3_5>=26 && LA3_5<=27)) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;

                }

                switch (alt3) {
            	case 1 :
            	    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:35:11: vd= varDeclaration
            	    {
            	    pushFollow(FOLLOW_varDeclaration_in_classDeclaration161);
            	    vd=varDeclaration();

            	    state._fsp--;

            	     vdl.add(vd);
            	              

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:39:9: (md= methodDeclaration )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==IDENT||(LA4_0>=19 && LA4_0<=21)||(LA4_0>=28 && LA4_0<=29)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:39:11: md= methodDeclaration
            	    {
            	    pushFollow(FOLLOW_methodDeclaration_in_classDeclaration202);
            	    md=methodDeclaration();

            	    state._fsp--;

            	     mdl.add(md);
            	              

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            match(input,18,FOLLOW_18_in_classDeclaration233); 

                  c = new MJClass((cname!=null?cname.getText():null), superClass, vdl, mdl);
                

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return c;
    }
    // $ANTLR end "classDeclaration"


    // $ANTLR start "mainClass"
    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:49:1: mainClass returns [MJClass c] : 'class' cname= IDENT '{' 'public' 'static' 'void' 'main' '(' 'String[]' parname= IDENT ')' b= block '}' ;
    public final MJClass mainClass() throws RecognitionException {
        MJClass c = null;

        Token cname=null;
        Token parname=null;
        MJBlock b = null;


        try {
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:50:3: ( 'class' cname= IDENT '{' 'public' 'static' 'void' 'main' '(' 'String[]' parname= IDENT ')' b= block '}' )
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:50:5: 'class' cname= IDENT '{' 'public' 'static' 'void' 'main' '(' 'String[]' parname= IDENT ')' b= block '}'
            {
            match(input,15,FOLLOW_15_in_mainClass256); 
            cname=(Token)match(input,IDENT,FOLLOW_IDENT_in_mainClass262); 
            match(input,17,FOLLOW_17_in_mainClass269); 
            match(input,19,FOLLOW_19_in_mainClass278); 
            match(input,20,FOLLOW_20_in_mainClass280); 
            match(input,21,FOLLOW_21_in_mainClass282); 
            match(input,22,FOLLOW_22_in_mainClass284); 
            match(input,23,FOLLOW_23_in_mainClass286); 
            match(input,24,FOLLOW_24_in_mainClass288); 
            parname=(Token)match(input,IDENT,FOLLOW_IDENT_in_mainClass294); 
            match(input,25,FOLLOW_25_in_mainClass296); 
            pushFollow(FOLLOW_block_in_mainClass302);
            b=block();

            state._fsp--;

            match(input,18,FOLLOW_18_in_mainClass308); 

                  MJType partype = new MJType(new MJType("String"));
                  MJVariable par = new MJVariable( partype, (parname!=null?parname.getText():null));
                  LinkedList<MJVariable> parlist = new LinkedList<MJVariable>();
                  parlist.add(par);
                 
                  MJMethod md = new MJMethod(MJType.Tnone, "main", parlist, b, true, true);
                  c = new MJClass((cname!=null?cname.getText():null), md);
              

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return c;
    }
    // $ANTLR end "mainClass"


    // $ANTLR start "block"
    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:65:1: block returns [MJBlock b] : '{' (vd= varDeclaration )* (sd= statement )* '}' ;
    public final MJBlock block() throws RecognitionException {
        MJBlock b = null;

        MJVariable vd = null;

        MJStatement sd = null;


        try {
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:66:3: ( '{' (vd= varDeclaration )* (sd= statement )* '}' )
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:66:5: '{' (vd= varDeclaration )* (sd= statement )* '}'
            {
              LinkedList<MJVariable> vdl = new LinkedList<MJVariable>();
                   LinkedList<MJStatement> sdl = new LinkedList<MJStatement>();    
                
            match(input,17,FOLLOW_17_in_block339); 
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:69:9: (vd= varDeclaration )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==IDENT) ) {
                    int LA5_2 = input.LA(2);

                    if ( (LA5_2==IDENT) ) {
                        alt5=1;
                    }


                }
                else if ( ((LA5_0>=28 && LA5_0<=29)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:69:11: vd= varDeclaration
            	    {
            	    pushFollow(FOLLOW_varDeclaration_in_block347);
            	    vd=varDeclaration();

            	    state._fsp--;

            	     vdl.add(vd); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:72:9: (sd= statement )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=IDENT && LA6_0<=COMMENT)||LA6_0==17||LA6_0==34||(LA6_0>=36 && LA6_0<=37)||LA6_0==49) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:72:11: sd= statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block388);
            	    sd=statement();

            	    state._fsp--;

            	     sdl.add(sd); 

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            match(input,18,FOLLOW_18_in_block418); 

                   b = new MJBlock(vdl, sdl);
                

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return b;
    }
    // $ANTLR end "block"


    // $ANTLR start "varDeclaration"
    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:81:1: varDeclaration returns [MJVariable vd] : t= type n= IDENT ( '=' e= expression )? ';' ;
    public final MJVariable varDeclaration() throws RecognitionException {
        MJVariable vd = null;

        Token n=null;
        MJType t = null;

        MJExpression e = null;


        try {
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:82:3: (t= type n= IDENT ( '=' e= expression )? ';' )
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:82:5: t= type n= IDENT ( '=' e= expression )? ';'
            {
             MJExpression init = new MJNoExpression(); 
            pushFollow(FOLLOW_type_in_varDeclaration455);
            t=type();

            state._fsp--;

            n=(Token)match(input,IDENT,FOLLOW_IDENT_in_varDeclaration461); 
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:83:24: ( '=' e= expression )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==26) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:83:26: '=' e= expression
                    {
                    match(input,26,FOLLOW_26_in_varDeclaration465); 
                    pushFollow(FOLLOW_expression_in_varDeclaration471);
                    e=expression();

                    state._fsp--;

                     init = e; 

                    }
                    break;

            }

            match(input,27,FOLLOW_27_in_varDeclaration477); 
             vd = new MJVariable(t, (n!=null?n.getText():null), init);
                

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return vd;
    }
    // $ANTLR end "varDeclaration"


    // $ANTLR start "type"
    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:88:1: type returns [MJType t] : ( 'boolean' | 'int' ( '[' ']' )? | IDENT );
    public final MJType type() throws RecognitionException {
        MJType t = null;

        Token IDENT1=null;

        try {
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:89:3: ( 'boolean' | 'int' ( '[' ']' )? | IDENT )
            int alt9=3;
            switch ( input.LA(1) ) {
            case 28:
                {
                alt9=1;
                }
                break;
            case 29:
                {
                alt9=2;
                }
                break;
            case IDENT:
                {
                alt9=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }

            switch (alt9) {
                case 1 :
                    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:89:5: 'boolean'
                    {
                    match(input,28,FOLLOW_28_in_type501); 
                     t = MJType.Tboolean; 

                    }
                    break;
                case 2 :
                    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:91:5: 'int' ( '[' ']' )?
                    {
                    match(input,29,FOLLOW_29_in_type513); 
                     t = MJType.Tint; 
                    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:93:5: ( '[' ']' )?
                    int alt8=2;
                    int LA8_0 = input.LA(1);

                    if ( (LA8_0==30) ) {
                        alt8=1;
                    }
                    switch (alt8) {
                        case 1 :
                            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:93:7: '[' ']'
                            {
                            match(input,30,FOLLOW_30_in_type528); 
                            match(input,31,FOLLOW_31_in_type530); 
                             t = new MJType(MJType.Tint); 

                            }
                            break;

                    }


                    }
                    break;
                case 3 :
                    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:96:5: IDENT
                    {
                    IDENT1=(Token)match(input,IDENT,FOLLOW_IDENT_in_type552); 
                     t = new MJType((IDENT1!=null?IDENT1.getText():null)); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return t;
    }
    // $ANTLR end "type"


    // $ANTLR start "methodDeclaration"
    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:100:1: methodDeclaration returns [MJMethod md] : ( 'public' )? ( 'static' )? mtype= procType mname= IDENT '(' (t1= type n1= IDENT ( ',' t2= type n2= IDENT )* )? ')' '{' (vd= varDeclaration )* (sd= statement )* 'return' retExp= optExpression ';' '}' ;
    public final MJMethod methodDeclaration() throws RecognitionException {
        MJMethod md = null;

        Token mname=null;
        Token n1=null;
        Token n2=null;
        MJType mtype = null;

        MJType t1 = null;

        MJType t2 = null;

        MJVariable vd = null;

        MJStatement sd = null;

        MJExpression retExp = null;


        try {
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:101:3: ( ( 'public' )? ( 'static' )? mtype= procType mname= IDENT '(' (t1= type n1= IDENT ( ',' t2= type n2= IDENT )* )? ')' '{' (vd= varDeclaration )* (sd= statement )* 'return' retExp= optExpression ';' '}' )
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:101:5: ( 'public' )? ( 'static' )? mtype= procType mname= IDENT '(' (t1= type n1= IDENT ( ',' t2= type n2= IDENT )* )? ')' '{' (vd= varDeclaration )* (sd= statement )* 'return' retExp= optExpression ';' '}'
            {
             LinkedList<MJVariable> parlist = new LinkedList<MJVariable>(); 
                  boolean isStatic = false;
                  boolean isPublic = false;
                  LinkedList<MJVariable> vdl = new LinkedList<MJVariable>();
                  LinkedList<MJStatement> sdl = new LinkedList<MJStatement>();    
                
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:107:5: ( 'public' )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==19) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:107:7: 'public'
                    {
                    match(input,19,FOLLOW_19_in_methodDeclaration584); 
                     isPublic = true; 

                    }
                    break;

            }

            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:108:5: ( 'static' )?
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==20) ) {
                alt11=1;
            }
            switch (alt11) {
                case 1 :
                    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:108:7: 'static'
                    {
                    match(input,20,FOLLOW_20_in_methodDeclaration597); 
                     isStatic = true; 

                    }
                    break;

            }

            pushFollow(FOLLOW_procType_in_methodDeclaration612);
            mtype=procType();

            state._fsp--;

            mname=(Token)match(input,IDENT,FOLLOW_IDENT_in_methodDeclaration618); 
            match(input,23,FOLLOW_23_in_methodDeclaration625); 
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:111:7: (t1= type n1= IDENT ( ',' t2= type n2= IDENT )* )?
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( (LA13_0==IDENT||(LA13_0>=28 && LA13_0<=29)) ) {
                alt13=1;
            }
            switch (alt13) {
                case 1 :
                    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:111:9: t1= type n1= IDENT ( ',' t2= type n2= IDENT )*
                    {
                    pushFollow(FOLLOW_type_in_methodDeclaration640);
                    t1=type();

                    state._fsp--;

                    n1=(Token)match(input,IDENT,FOLLOW_IDENT_in_methodDeclaration646); 
                     parlist.add(new MJVariable(t1,(n1!=null?n1.getText():null))); 
                    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:113:9: ( ',' t2= type n2= IDENT )*
                    loop12:
                    do {
                        int alt12=2;
                        int LA12_0 = input.LA(1);

                        if ( (LA12_0==32) ) {
                            alt12=1;
                        }


                        switch (alt12) {
                    	case 1 :
                    	    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:113:11: ',' t2= type n2= IDENT
                    	    {
                    	    match(input,32,FOLLOW_32_in_methodDeclaration669); 
                    	    pushFollow(FOLLOW_type_in_methodDeclaration675);
                    	    t2=type();

                    	    state._fsp--;

                    	    n2=(Token)match(input,IDENT,FOLLOW_IDENT_in_methodDeclaration681); 
                    	     parlist.add(new MJVariable(t2,(n2!=null?n2.getText():null))); 

                    	    }
                    	    break;

                    	default :
                    	    break loop12;
                        }
                    } while (true);


                    }
                    break;

            }

            match(input,25,FOLLOW_25_in_methodDeclaration722); 
            match(input,17,FOLLOW_17_in_methodDeclaration729); 
            // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:118:9: (vd= varDeclaration )*
            loop14:
            do {
                int alt14=2;
                int LA14_0 = input.LA(1);

                if ( (LA14_0==IDENT) ) {
                    int LA14_2 = input.LA(2);

                    if ( (LA14_2==IDENT) ) {
                        alt14=1;
                    }


                }
                else if ( ((LA14_0>=28 && LA14_0<=29)) ) {
                    alt14=1;
                }


                switch (alt14) {
            	case 1 :
            	    // /home/krc/workspace/MiniJavaProject1/src/compiler/Frontend/MiniJava.g:118:11: vd= varDeclaration
            	    {
            	    pushFollow(FOLLOW_varDeclaration_in_methodDeclaration737);
            	    vd=varDeclaration();

            	    state._fsp--;

            	     vdl.add(vd); 

            	    }
            	    break;

            	default :
            	    break loop14;
                }
            } while (true);
